Fix covered menu button in docs
Do not increase sidebar width when the sidebar is collapsible via a
hamburger menu - it's only meant to take effect when the screen width is
large enough to split the screen width into two columns for sidebar and
page content respectively. Attempting to increase sidebar width in "slim
mode" instead causes the sidebar to appear even when collapsed, cover
the hamburger button and make it unclickable.

--- a/docs/extra.css
+++ b/docs/extra.css
@@ -29,8 +29,11 @@
 
 /* SIDEBAR TWEAKS */
 
-.md-sidebar {
-  width: 14rem;
+/* Only takes effect when hamburger menu is not available */
+@media screen and (min-width: 1220px) {
+  .md-sidebar {
+    width: 14rem;
+  }
 }
 
 .md-tabs__item a{
